# SliceTRiP

./: CMakeLists.txt  CMakeLists.txt~  GSI_Standard.ctbl  LoadCTX_bck.py  README.md  loadct.sh  loaddvh.sh  modelcreate_info.txt  modelcreate_info.txt~  tmp.py  tmp.py~
ComparePatients/: CMakeLists.txt  ComparePatients.py  ComparePatients.py~
ComparePatients/ComparePatientsLib/: Patients.py  Patients.py~  Voi.py  Voi.py~
ComputeDVH/: CMakeLists.txt  ComputeDVH.py  ComputeDVH.py~
CreateMovie/: CMakeLists.txt  CreateMovie.py  CreateMovie.py~
LoadCTX/: CMakeLists.txt  CMakeLists.txt~  GSIStandard.txt  GSI_Standard.ctbl  LoadCTX.py  LoadCTX.py~  colorTable.sh
LoadCTX/LoadCTXLib/: LoadCTXBinfo.py  LoadCTXBinfo.py~  LoadCTXImageImportFromArray.py  LoadCTXImageImportFromArray.py~  SubjectHiearchy.py  SubjectHiearchy.py~  __init__.py  __init__.py~  cube.py
LoadCTXLight/: LoadCTXLight.py
LoadCTXLight/LoadCTXLib/: LoadCTXBinfo.py  __init__.py
SaveTRiP/: CMakeLists.txt  SaveTRiP.py  SaveTRiP.py~
SaveTRiP/SaveTRiPLib/: ConvertNode.py  ConvertNode.py~  __init__.py
SliceTRiP.git/: config
Slicet/: LoadCTXSlicet.py  Slicet.py  TridDVHSlicet.py  TripDVHSlicet.py
TRiPDVH/: CMakeLists.txt  TRiPDVH.py  TRiPDVH.py~
TRiPDVH/ComparePatientsLib/: Call.py  Patients.py  Voi.py  __init__.py
hed2nrrd/: headerTmp.hed  headerTmp.nrrd  hed2nrrd.py  hed2nrrd.sh  nrrd2hed.sh
